@@ -224,6 +224,7 @@ public class OPINWithExclusionTest {
         query = "wegen #IN(N,ALL,%) <s>";
         qs.setQuery(query, "cosmas2");
         res = mapper.readTree(qs.toJSON());
+//        System.out.println(res);
         assertEquals("koral:group", res.at("/query/@type").asText());
         assertEquals("operation:exclusion",
                 res.at("/query/operation").asText());
@@ -276,4 +277,31 @@ public class OPINWithExclusionTest {
                 res.at("/query/operands/0/frames/0").asText());
     }
 
+    // EM: Does exclusion HIT not need classRefCheck?
+    @Test
+    public void testOPINwithExclusionN_HIT ()
+            throws JsonProcessingException, IOException {
+        
+        query = "wegen #IN(N,HIT,%) (wegen /w5:10 des)";
+        qs.setQuery(query, "cosmas2");
+        res = mapper.readTree(qs.toJSON());
+//        System.out.println(res);
+        assertEquals("koral:group", res.at("/query/@type").asText());
+        assertEquals("operation:exclusion",
+                res.at("/query/operation").asText());
+        assertEquals(1, res.at("/query/frames").size());
+        assertEquals("frames:isWithin", res.at("/query/frames/0").asText());
+        assertEquals("koral:token", res.at("/query/operands/0/@type").asText());
+        
+        assertEquals("operation:sequence", res.at("/query/operands/1/operation").asText());
+        
+        JsonNode seqOperand = res.at("/query/operands/1/operands");
+                
+        assertEquals("operation:class", seqOperand.at("/0/operation").asText());
+        assertEquals(129, seqOperand.at("/0/classOut").asInt());
+        
+        assertEquals("operation:class", seqOperand.at("/1/operation").asText());
+        assertEquals(129, seqOperand.at("/1/classOut").asInt());
+    }
+    
 }
